<resources>
	<string name="app_name">Android Fundamentals</string>
	<string name="textview1">This is an orange TextView</string>
	<string name="textview2">This is a green TextView</string>
	<string name="textview3">This is a blue TextView</string>
	<string name="button1">This is a blue button</string>
	<string name="button2">This is a green button</string>
	<string name="edittext1">This is an EditText</string>
	<string name="edittext2">This is a new EditText</string>
	<string name="checkbox1">Notify me :)</string>
	<string name="switch1">Auto backup</string>
	<string name="yes">YES</string>
	<string name="no">NO</string>
</resources>
